--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -153,12 +153,16 @@ p {
             display: flex;
             align-items: center;
             background-color: $background-grey;
-            border: solid 1px $background-grey;
+            border: none;
             border-radius: 20px;
             width: 100%;
             height: 70px;
             box-shadow: 1px 4px 10px 0px rgba(0, 0, 0, 0.2);
             margin-bottom: 25px;
+        }
+
+        &--button:hover {
+            background: scale-color($color-prima, $lightness:80%);
         }
 
         &--icon {
@@ -221,6 +225,7 @@ p {
         width: 24px;
         padding: 3px 7px 5px 7px;
     }
+
 }
 
 // Restaurants
@@ -235,7 +240,6 @@ p {
     }
 
     &__card {
-        border: 1px solid red;
         width: 100%;
         height: 250px;
         background-color: white;
@@ -245,9 +249,12 @@ p {
         &__img {
             width: 100%;
             height: 172px;
-            object-fit: cover;
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
+        }
+
+        & a[href*="rest2"] > img{
+            object-fit: cover;
         }
 
         &__content {
@@ -346,7 +353,7 @@ p {
 }
 
 .footer {
-    background-color: black;
+    background-color: #353535;
     height: 197px;
 
     &__title {
