--- a/src/Sass/style.scss
+++ b/src/Sass/style.scss
@@ -364,7 +364,7 @@ p {
         -webkit-background-clip: text; // Limite le background a la surface occupé par le texte 
         -webkit-text-fill-color: transparent; // Change la couleur du text 
         background-clip: text; // Limite le background a la surface occupé par le texte
-        animation: heartFileIn linear 1s;
+        animation: heartFileIn ease-in-out 1s;
         animation-iteration-count: 1;
         animation-fill-mode: backwards;
     }
@@ -577,7 +577,7 @@ p {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin: auto;
+        margin-inline: auto;
 
         &__header {
             display: flex;
@@ -605,7 +605,7 @@ p {
     }
 
     &__card {
-        width: min(100%, 470px);
+        width: min(98%, 450px);
         height: 4.25rem;
         background-color: white;
         border-radius: 15px;
@@ -734,7 +734,7 @@ p {
 
 .restau__card {
     opacity: 0;
-    animation: cardFadeIn linear 1s;
+    animation: cardFadeIn linear 50ms;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 
@@ -783,11 +783,9 @@ p {
     0% {
         opacity: 0;
     }
-
-    50% {
+    60%{
         opacity: 0;
     }
-
     100% {
         opacity: 1;
     }
@@ -832,25 +830,6 @@ p {
             padding: 10px 0 15px 15px;
         }
     }
-
-    // Restau
-
-        // &__underline {
-        //     width: min(14%, 40px);
-        //     border-bottom: 3px solid $color-tert;
-        //     margin: 4px 0 12px 0;
-        // }
-
-        // &--row {
-        //     display: flex;
-        //     flex-direction: inherit;
-        //     justify-content: center;
-        //     align-items: center;
-        //     width: 100%;
-        // }
-    
-
-
 }
 
 @media screen and (min-width: 992px) {
@@ -897,29 +876,17 @@ p {
 }
 
 @media screen and (min-width: 1400px) {
-    html {
-        font-size: 22px;
-    }
+
     .restau {
-        &__section {
-            width: min(95%, 1650px);
-        }
-        &--row {
+        &__column {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
-            gap: 1rem;
-            flex-wrap: nowrap;
+            width: min(98%, 1650px);
+            margin-inline: auto;
+        }
+        &__section {
+            justify-content: flex-start;
         }
 
-    }
-    .row4cards {
-        justify-content: space-between;
-        flex-wrap: wrap;
-        width: 80%;
-        margin-inline: auto;
-        // & .restau__card {
-        //     width: min(100%, 380px);
-        // }
     }
 }
